# llm-listener

./: .dockerignore  .env.example  .gitignore  DISCORDANCE_ANALYSIS.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Procfile  example_discordance_usage.py  example_enhanced_evidence_format.md  nixpacks.toml  pyproject.toml  railway.json  test_evidence.py
data/: study_responses.json
docs/: CLIENT_SIDE_PHI_ARCHITECTURE.md  FILE_UPLOAD_ARCHITECTURE.md  MYCHART_INTEGRATION.md
docs/audits/: CONFIG_AUDIT.md  DISCORDANCE_AUDIT.md  OLLAMA_PROVIDER_AUDIT.md
docs/infrastructure/: RAILWAY_DATABASE_SETUP.md
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.jsx  AppSimplified.jsx  AuthContext.jsx  ResultsDashboard.jsx  SimpleAuth.jsx  StudyMode.jsx  index.css  main.jsx  pregenerated_responses.json  studyData.js
llm_listener/: __init__.py  api.py  cli.py  database.py  evidence.py  evidence_summarizer.py  file_upload.py  image_extractor.py  media.py  news.py  patents.py  reference.py
llm_listener/auth/: __init__.py  config.py  dependencies.py  jwt_utils.py  oidc.py  rbac.py  routes.py
llm_listener/core/: __init__.py  agreement.py  config.py  conflict_audit.py  conflict_orchestrator.py  conflict_resolution.py  conflict_settings.py  conflicts.py  discordance.py  orchestrator.py  reconciler.py
llm_listener/providers/: __init__.py  (+6 more)
research/: APPENDIX_A_Content_Accuracy_Form.md  APPENDIX_B_Message_Quality_Form.md  STUDY_PROTOCOL.md
scripts/: generate_study_responses.py
study/: evaluate_concrete.py  evaluate_judge.py  generate_report.py  questions.json  run_study.py
tests/: README.md  conftest.py  test_api.py  test_config.py  test_ollama_provider.py
(+16 files in other folders)
